apps/staging/jellyseerr/cloudflare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-jellyseerr
  namespace: media
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudflared-jellyseerr
  template:
    metadata:
      labels:
        app: cloudflared-jellyseerr
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2026.10.0
          args:
            - tunnel
            - --config
            - /etc/cloudflared/config/config.yaml
            - run
          livenessProbe:
            httpGet:
              path: /ready
              port: 2000
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /etc/cloudflared/config
              readOnly: true
            - name: creds
              mountPath: /etc/cloudflared/creds
              readOnly: true
      volumes:
        - name: creds
          secret:
            secretName: jellyseerr-tunnel-credentials
        - name: config
          configMap:
            name: cloudflared-jellyseerr
